--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,12 @@
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <nav>
+        <router-link to="/foo">Go to Foo</router-link>
+      </nav>
+      <router-view />
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
